--- a/main.css
+++ b/main.css
@@ -6155,3 +6155,6 @@ figcaption {
 #w-node-_4288af17-1c82-e766-edec-c062ed643801-ed643801,#w-node-a939ad03-423f-a399-98af-177ca1d9fb0b-a1d9fb01,#w-node-c1bb2244-5b50-4cbf-d9c9-c978dad3e5ac-dad3e5ac,#w-node-_6b4ff9b2-fc84-4be4-f185-3e4503b41ce3-03b41c41,#w-node-_6b4ff9b2-fc84-4be4-f185-3e4503b41ce9-03b41c41 {
     grid-area: span 1/span 1/span 1/span 1
 }
+.d-none {
+    display: none
+}
