--- a/about.css
+++ b/about.css
@@ -32,7 +32,7 @@
     --background--tertiary-dark: var(--brand--purple-light);
     --_theme-nav---dropdown--text: var(--neutral--white);
     --_theme-nav---dropdown--hover: #7c26d133;
-    --brand--coral: #f25c3a;
+    --brand--coral: #3dfd98;
     --background--primary-light: var(--neutral--light-pink);
     --neutral--white: white;
     --_theme-nav---button-bg: #7c26d133;
